--- a/style.css
+++ b/style.css
@@ -101,6 +101,10 @@ nav img{
     background: #f44336;
     transition: 1s;
 }
+h1{
+    text-decoration: none;
+    text-decoration-line: none;
+}
 
 nav .bi{
     display: none;
